--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
   --black: #000;
   --darkGray: #333333;
   --lightGray: #f2f2f2;
-  --white: #ffffff;
+  --white: #ffff;
   --darkBlue: #001730;
   --blue: #337ab7;
   --lightBlue: #4ad7d1;
